# OpenFOAM_to_SpeedITCL_converters

./: CMakeLists.txt  OpenFoam2SpeedITCL.cpp  README.md
cmake_modules/: FindOpenFoam.cmake
common/: CMakeLists.txt
common/include/: OF2SITFCLBoundary.h  OF2SITFCLConstants.h  OF2SITFCLErrorHandling.h  OF2SITFCLFieldInternals.h  OF2SITFCLFieldWriter.h  OF2SITFCLMeshWriter.h  OF2SITFCLSettings.h  OF2SITFCLSolverLoader.h  OF2SITFCLUtils.h  OF2SITFCLVectorWriter.h
common/src/: OF2SITFCLBoundary.cpp  OF2SITFCLErrorHandling.cpp  OF2SITFCLFieldInternals.cpp  OF2SITFCLFieldWriter.cpp  OF2SITFCLMeshWriter.cpp  OF2SITFCLSettings.cpp  OF2SITFCLSolverLoader.cpp  OF2SITFCLUtils.cpp
